# ocaml-zlib

./: .bazelrc  .gitignore  MODULE.bazel
src/: BUILD.bazel
test/: BUILD.bazel  test.ml
